--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -6,6 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Terms & Conditions — Bettrion</title>
+    
+    <!-- Favicon / Browser Tab Icon -->
+<link rel="icon" type="image/webp" href="/assets/images/bettrion-logo_notxt.webp" />
+
+<!-- PNG fallback (recommended for some browsers) -->
+<link rel="icon" type="image/png" href="/assets/images/bettrion-logo_notxt.webp" />
+
+<!-- Apple Touch Icon (iPhone/iPad Home Screen) -->
+<link rel="apple-touch-icon" href="/assets/images/bettrion-logo_notxt.webp">
+
+<!-- Manifest for Android Chrome (optional) -->
+<link rel="manifest" href="/manifest.json">
+
+<!-- Windows Tiles (optional but nice for branding) -->
+<meta name="msapplication-TileImage" content="/assets/images/bettrion-logo_notxt.webp">
+<meta name="msapplication-TileColor" content="#000000">
+
+<!-- Social Media / Discord / WhatsApp Preview -->
+<meta property="og:image" content="/assets/images/bettrion-logo_notxt.webp">
+<meta property="og:image:type" content="image/webp">
+<meta property="og:image:width" content="512">
+<meta property="og:image:height" content="512">
+
+<!-- SEO / Brand -->
+<meta name="theme-color" content="#FFD54A">
+<meta name="apple-mobile-web-app-capable" content="yes">
+
     <meta name="description"
         content="Bettrion Terms & Conditions — Read our legal guidelines, responsibilities, affiliate disclosures, user rights, territorial rules, age restrictions, and more.">
 
